--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ body {
 }
 
 .principal {
-   background-image: url("invocação.jpeg");
+   background-image: url("Texto\ do\ seu\ parágrafo.jpg");
    background-image: url("");
     background-repeat: no-repeat;
     background-size: contain;
