--- a/styles.css
+++ b/styles.css
@@ -154,3 +154,7 @@ body {
     background-color: var(--botao-azul-efeito);
     color: var(--cor-de-fundo);
 }
+
+.container__caixa {
+    align-items: center;
+}
