--- a/styles.css
+++ b/styles.css
@@ -20,13 +20,13 @@ body {
     padding: 0;
 }
 
-.principal {
+.container_principal {
    background-image: url("Texto\ do\ seu\ parágrafo.jpg");
    background-image: url("");
     background-repeat: no-repeat;
     background-size: contain;
-    align-items: center;
-    text-align: center;
+    align-items: first baseline;
+    text-align: left;
 }
 
 .container {
@@ -156,5 +156,5 @@ body {
 }
 
 .container__caixa {
-  display: inline-block;
+  
 }
