--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,7 @@ body {
     background-size: contain;
     align-items: first baseline;
     text-align: left;
+    display: inline-block;
 }
 
 .container {
