--- a/styles.css
+++ b/styles.css
@@ -157,3 +157,10 @@ body {
 .container__caixa {
   
 }
+.container_principal {
+    background-image: url("Texto\\ do\\ seu\\ parágrafo.jpg");
+    background-repeat: no-repeat;
+    background-size: contain;
+    display: inline-block;
+    text-align: left; /* Adicione esta linha para alinhar à esquerda */
+}
