--- a/styles.css
+++ b/styles.css
@@ -162,6 +162,5 @@ body {
     background-repeat: no-repeat;
     background-size: contain;
     display: left;
-    text-align: left;
-    text-align: left; /* Adicione esta linha para alinhar à esquerda */
+    text-align: right; /* Adicione esta linha para alinhar à esquerda */
 }
