--- a/styles.css
+++ b/styles.css
@@ -157,9 +157,9 @@ body {
 .container__caixa {
   
 }
-.container_principal {
+.container__caixa {
     background-image: url("Texto\\ do\\ seu\\ parágrafo.jpg");
     background-repeat: no-repeat;
     background-size: contain;
-    text-align: right; /* Adicione esta linha para alinhar à esquerda */
+    text-align: left; /* Adicione esta linha para alinhar à esquerda */
 }
