--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@ body {
 }
 
 .principal {
-    background-image: url("img/Background.png");
+    background-image: url("Texto\ do\ seu\ parágrafo.jpg");
     background-repeat: no-repeat;
     background-size: contain;
     align-items: center;
