--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 :root {
-    --branco-principal: #090909;
+    --branco-principal: #ac3838;
     --cinza-secundario: #C0C0C0;
     --botao-azul: #167BF7;
     --cor-de-fundo: #00030C;
