--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 :root {
-    --branco-principal: #8e395f;
+    --branco-principal: #342e53;
     --cinza-secundario: #C0C0C0;
-    --botao-azul: #167BF7;
+    --botao-azul: #435c7a;
     --cor-de-fundo: #00030C;
     --fonte-principal: 'Inter';
     --botao-azul-efeito: #3c92fa;
