--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 :root {
-    --branco-principal: #342e53;
+    --branco-principal: #101011;
     --cinza-secundario: #C0C0C0;
     --botao-azul: #8191a6;
     --cor-de-fundo: #00030C;
