--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
     --branco-principal: #101011;
     --cinza-secundario: #C0C0C0;
     --botao-azul: #8191a6;
-    --cor-de-fundo: #4d76ee;
+    --cor-de-fundo: #3b3b3d;
     --fonte-principal: 'Inter';
     --botao-azul-efeito: #3c92fa;
 }
